--- a/ranch/redhat/citool-config/config/testing-farm-request.j2
+++ b/ranch/redhat/citool-config/config/testing-farm-request.j2
@@ -1,3 +1,4 @@
 [default]
 api-url = https://internal.api.dev.testing-farm.io
-api-key = {{ credentials['testing-farm']['worker']['api-key'] }}
+api-key = {{ credentials['testing_farm']['worker']['api_key'] }}
+retry-timeout = 600
