Add Z-Stream tag repos for RHEL

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
@@ -1,5 +1,5 @@
 [testing-farm-tag-repository]
-name=Tag repository for {{ tag_repository_name }}
+name=Tag repository for {{ IMAGE_NAME }}
 baseurl={{ tag_repository_url }}
 gpgcheck=0
 enabled=1
