--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
@@ -5,5 +5,6 @@ gpgcheck=0
 enabled=1
 priority=9
 skip_if_unavailable=True
-# See TFT-847
-exclude=glibc32*
+# See TFT-847 - glibc32*
+# See TFT-1284 - beakerlib
+exclude=glibc32* beakerlib
