config/testing-farm-request: mention TFT-712
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/config/testing-farm-request.j2
+++ b/ranch/public/citool-config/config/testing-farm-request.j2
@@ -1,4 +1,5 @@
 [default]
 api-url = https://internal.api.dev.testing-farm.io
 api-key = {{ credentials['testing_farm']['worker']['api_key'] }}
+# TFT-712
 retry-timeout = 600
