--- a/ranch/redhat/citool-config/config/testing-farm-request.j2
+++ b/ranch/redhat/citool-config/config/testing-farm-request.j2
@@ -1,4 +1,5 @@
 [default]
 api-url = https://internal.api.dev.testing-farm.io
 api-key = {{ credentials['testing_farm']['worker']['api_key'] }}
+# TFT-712
 retry-timeout = 600
