guest-setup/tag-repository: add module_hotfixes=1 to tag repository
For more context see https://issues.redhat.com/browse/RHELBLD-13323

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
@@ -5,3 +5,7 @@ gpgcheck=0
 enabled=1
 priority={{ tag_repository_priority }}
 skip_if_unavailable=True
+%{ if ansible_distribution == "RedHat" AND ansible_distribution_major_version > 7 %}
+# RHELBLD-13323 - This option is required for modularity content, RHEL8+
+module_hotfixes=1
+%{ endif %}
