--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
@@ -5,7 +5,7 @@ gpgcheck=0
 enabled=1
 priority={{ tag_repository_priority }}
 skip_if_unavailable=True
-%{ if ansible_distribution == "RedHat" AND ansible_distribution_major_version > 7 %}
+{% if ansible_distribution == "RedHat" and ansible_distribution_major_version|int > 7 %}
 # RHELBLD-13323 - This option is required for modularity content, RHEL8+
 module_hotfixes=1
-%{ endif %}
+{% endif %}
