--- a/terragrunt/environments/dev/worker/citool-config/environment.yaml.j2
+++ b/terragrunt/environments/dev/worker/citool-config/environment.yaml.j2
@@ -4,4 +4,4 @@
 
 testing_farm_request_api_key: "{{ credentials.testing_farm.ranch.public.worker_api_key }}"
 artemis_api_url: "http://{{ artemis_api_domain }}/v0.0.56/"
-artemis_api_version: "v0.0.56"
+artemis_api_version: "0.0.56"
