--- a/terragrunt/environments/staging/worker/citool-config/environment.yaml.j2
+++ b/terragrunt/environments/staging/worker/citool-config/environment.yaml.j2
@@ -3,5 +3,5 @@
 # consumed by gluetool and contains credentials and values specific to each dev environment.
 
 testing_farm_request_api_key: "{{ credentials.testing_farm.ranch.public.worker_api_key }}"
-artemis_api_url: "http://{{ artemis_api_domain }}/v0.0.56/"
+artemis_api_url: "http://{{ artemis_api_domain }}"
 artemis_api_version: "0.0.56"
