Revert "ranch/public: disable cockpit from tag repository"
This reverts commit 37e107372d0f4f0c377069d4f13c82b1eea1badd.

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
@@ -7,5 +7,4 @@ priority=9
 skip_if_unavailable=True
 # See TFT-847 - glibc32*
 # See TFT-1284 - beakerlib
-# Cockpit disabled on request from Slack - https://redhat-internal.slack.com/archives/C03BRN71JAF/p1694619623235559
-exclude=glibc32* beakerlib cockpit*
+exclude=glibc32* beakerlib
