dev/server: add nginx reverse proxy

--- a/terragrunt/environments/dev/server/ec2/server.bu.j2
+++ b/terragrunt/environments/dev/server/ec2/server.bu.j2
@@ -23,3 +23,19 @@ storage:
       mode: 0644
       contents:
         local: terragrunt/environments/dev/server/pods/cockroach.kube
+    - path: /etc/testing-farm/pods/nginx.yaml
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/nginx.yaml
+    - path: /etc/containers/systemd/nginx.kube
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/nginx.kube
+    - path: /etc/nginx/conf.d/api.dev-{{ ansible_env.USER }}.testing-farm.io.conf
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/nginx/api.dev-{{ ansible_env.USER }}.testing-farm.io.conf
+    - path: /etc/nginx/conf.d/internal.api.dev-{{ ansible_env.USER }}.testing-farm.io.conf
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/nginx/internal.api.dev-{{ ansible_env.USER }}.testing-farm.io.conf
