--- a/terragrunt/environments/dev/server/ec2/server.bu.j2
+++ b/terragrunt/environments/dev/server/ec2/server.bu.j2
@@ -39,3 +39,14 @@ storage:
       mode: 0644
       contents:
         local: terragrunt/environments/dev/server/pods/nginx/internal.api.dev-{{ ansible_env.USER }}.testing-farm.io.conf
+  disks:
+    - device: /dev/nvme1n1
+      wipe_table: false
+      partitions:
+      - size_mib: 0
+        label: artifacts
+  filesystems:
+    - path: /var/artifacts
+      device: /dev/disk/by-partlabel/artifacts
+      format: xfs
+      with_mount_unit: true
