--- a/terragrunt/environments/dev/worker-public/citool-config/config/archive.j2
+++ b/terragrunt/environments/dev/worker-public/citool-config/config/archive.j2
@@ -1,6 +1,6 @@
 [default]
-artifacts-host = {{ artifacts_hostname }}
-artifacts-root = /archive
+artifacts-host = {{ artifacts_user }}@{{ artifacts_hostname }}
+artifacts-root = /var/artifacts
 source-destination-map = ${config_root}/source-destination-map.yaml
 rsync-mode = ssh
 rsync-options = --links,--times,--verbose,--compress
