dev/staging: add functions.py, report before runner
Prepare for 2024-04.1 where we can enable back this feature.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/dev/worker-public/jobs/tf-sti.j2
+++ b/terragrunt/environments/dev/worker-public/jobs/tf-sti.j2
@@ -77,8 +77,8 @@ citool-container.sh rules-engine \
                     test-scheduler-sti \
                     test-schedule-runner-sti \
                     test-scheduler-testing-farm \
-                    test-schedule-runner \
-                    test-schedule-report
+                    test-schedule-report \
+                    test-schedule-runner
 
 # create pipeline error if no results.xml available
 if [ ! -e "results.xml" ]; then
