fix module orders, change crednetial path in config gile

--- a/terragrunt/environments/production/worker-public/citool-config/config/testing-farm-request.j2
+++ b/terragrunt/environments/production/worker-public/citool-config/config/testing-farm-request.j2
@@ -1,6 +1,6 @@
 [default]
 api-url = https://internal.api.dev.testing-farm.io
-api-key = {{ credentials.testing_farm.ranch.public.users.worker.token }}
+api-key = {{ credentials.testing_farm.production.public.users.worker.token }}
 # TFT-712
 retry-timeout = 600
 enable-pipeline-cancellation = true
