multihost: use Artemis API `v0.0.69` version
The `tmt` artemis provision plugin does not yet support `v0.0.70`.
Introduce an aliased module `artemis-multihost` pinning the API version
to `v0.0.69`.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/dev/worker-public/jobs/tf-tmt-multihost.j2
+++ b/terragrunt/environments/dev/worker-public/jobs/tf-tmt-multihost.j2
@@ -66,7 +66,7 @@ citool-container.sh rules-engine \
                     testing-farm-request-state-reporter \
                     archive \
                     ansible \
-                    artemis \
+                    artemis-multihost:artemis \
                     git \
                     test-schedule-tmt-multihost \
                     test-scheduler-testing-farm \
