--- a/terragrunt/environments/dev/worker-public/citool-config/environment.yaml.j2
+++ b/terragrunt/environments/dev/worker-public/citool-config/environment.yaml.j2
@@ -4,6 +4,7 @@
 
 testing_farm_request_api_key: "{{ credentials.testing_farm.dev.public.users.worker.token }}"
 testing_farm_internal_api_url: "http://internal.api.dev-{{ USER }}.testing-farm.io"
+testing_farm_public_api_url: "http://api.dev-{{ USER }}.testing-farm.io"
 artifacts_url: "http://artifacts.dev-{{ USER }}.testing-farm.io"
 artemis_api_url: "http://{{ artemis_api_domain }}"
 artemis_api_version: "0.0.70"
