--- a/terragrunt/environments/production/worker-public/citool-config/config/testing-farm-request.j2
+++ b/terragrunt/environments/production/worker-public/citool-config/config/testing-farm-request.j2
@@ -1,5 +1,6 @@
 [default]
-api-url = https://internal.api.dev.testing-farm.io
+internal-api-url = https://internal.api.dev.testing-farm.io
+public-api-url = https://api.dev.testing-farm.io
 api-key = {{ credentials.testing_farm.production.public.users.worker.token }}
 # TFT-712
 retry-timeout = 600
