--- a/terragrunt/environments/dev/server/ec2/server.bu.j2
+++ b/terragrunt/environments/dev/server/ec2/server.bu.j2
@@ -62,6 +62,14 @@ storage:
       mode: 0644
       contents:
         local: terragrunt/environments/dev/server/pods/nginx/ui-backend.dev-{{ ansible_env.USER }}.testing-farm.io.conf
+    - path: /etc/testing-farm/pods/tmt-web.yaml
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/tmt-web.yaml
+    - path: /etc/containers/systemd/tmt-web.kube
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/tmt-web.kube
     - path: /etc/nginx/conf.d/api.dev-{{ ansible_env.USER }}.testing-farm.io.conf
       mode: 0644
       contents:
@@ -82,6 +90,10 @@ storage:
       mode: 0644
       contents:
         local: terragrunt/environments/dev/server/pods/nginx/server.conf
+    - path: /etc/nginx/conf.d/tmt.dev-{{ ansible_env.USER }}.testing-farm.io.conf
+      mode: 0644
+      contents:
+        local: terragrunt/environments/dev/server/pods/nginx/tmt.dev-{{ ansible_env.USER }}.testing-farm.io.conf
   directories:
     - path: /var/nomad
     - path: /var/artifacts
