--- a/terragrunt/environments/staging/worker-local/citool-config/environment.yaml.j2
+++ b/terragrunt/environments/staging/worker-local/citool-config/environment.yaml.j2
@@ -3,6 +3,7 @@
 # consumed by gluetool and contains credentials and values specific to each dev environment.
 
 testing_farm_request_api_key: "{{ credentials.testing_farm.staging.public.users.worker.token }}"
-testing_farm_internal_api_url: "http://internal.api.staging.testing-farm.io"
+testing_farm_internal_api_url: "http://internal.api.staging{{ staging_suffix | default("") }}.testing-farm.io"
+testing_farm_public_api_url: "http://api.staging{{ staging_suffix | default("") }}.testing-farm.io"
 artemis_api_url: "http://{{ artemis_api_domain }}"
 artemis_api_version: "0.0.70"
