nomad: raise garbage collection to 7 days, 80% disk usage
Seems with these values, we can change the Nomad behaviour on cleaning
up the allocations.

For more information see:

https://developer.hashicorp.com/nomad/docs/configuration/client#client-parameters

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/roles/nomad/templates/client.hcl.j2
+++ b/ansible/roles/nomad/templates/client.hcl.j2
@@ -7,6 +7,12 @@ client {
             {{ comma() }}"{{ server }}"
         {%- endfor -%}
     ]
+
+    # Garbage collection interval, by default 7 days
+    gc_interval = "{{ gc_interval|default("168h") }}"
+
+    # Garbage collection if disk usage is over threshold, by default 80%
+    gc_disk_usage_threshold = {{ gc_disk_usage_threshold|default(80) }}
 }
 
 plugin "raw_exec" {
