--- a/terragrunt/environments/production/worker-redhat/jobs/tf-sti.j2
+++ b/terragrunt/environments/production/worker-redhat/jobs/tf-sti.j2
@@ -7,8 +7,8 @@ printf "\n[pipeline-start] $(date)\n\n"
 
 export REQUEST_ID=$1
 
-export ARTIFACTS_URL="https://artifacts.dev.testing-farm.io"
-API_URL="https://api.dev.testing-farm.io/v0.1"
+export ARTIFACTS_URL="https://{{ artifacts_hostname }}"
+API_URL="https://{{ api_hostname }}/v0.1"
 
 [ -z "$REQUEST_ID" ] && { echo "No request ID given"; exit 1; }
 
@@ -34,7 +34,7 @@ EOF
 
 set_request_timeout() {
     REQUEST_TIMEOUT="$(echo "$REQUEST" | jq -r '.settings.pipeline.timeout | select (.!=null)')"
-    [ -z "$REQUEST_TIMEOUT" ] && REQUEST_TIMEOUT="720"
+    [ -z "$REQUEST_TIMEOUT" ] && REQUEST_TIMEOUT="1440"
     REQUEST_TIMEOUT="${REQUEST_TIMEOUT}m"
     echo "Request timeout: $REQUEST_TIMEOUT"
 }
@@ -50,8 +50,11 @@ rpm -qa > rpmlist-worker.txt
 # create in progress page
 create_results_xml in-progress skipped progress.xml
 
-# deploy oculus viewer
-curl -s --fail --retry 5 --show-error -o index.html https://gitlab.com/testing-farm/oculus/-/raw/main/results.html
+# deploy oculus viewer, set correct api url
+curl -s --fail --retry 5 --show-error -o index.html "{{ oculus_url }}"
+
+# deploy new ui preview (optionally)
+curl -s --fail --retry 5 --show-error -o next.html "{{ oculus_next_url }}" || true
 
 set_request_timeout
 set_citool_image
@@ -66,10 +69,16 @@ citool-container.sh rules-engine \
                     testing-farm-request-state-reporter \
                     archive \
                     ansible \
-                    static-guest --guest=localhost \
-                    guest-setup-no-playbooks:guest-setup \
+                    artemis \
+                    fedora-copr:copr \
+                    install-repository \
+                    install-copr-build \
+                    install-koji-build-execute \
+                    guest-setup-testing-farm:guest-setup \
+                    guest-setup-order \
                     git \
-                    test-schedule-tmt \
+                    test-scheduler-sti \
+                    test-schedule-runner-sti \
                     test-scheduler-testing-farm \
                     test-schedule-report \
                     test-schedule-runner
