--- a/terragrunt/environments/dev/worker-public/jobs/tf-tmt.j2
+++ b/terragrunt/environments/dev/worker-public/jobs/tf-tmt.j2
@@ -51,8 +51,11 @@ rpm -qa > rpmlist-worker.txt
 create_results_xml in-progress skipped progress.xml
 
 # deploy oculus viewer, set correct api url
-curl -s --fail --retry 5 --show-error -o index.html https://gitlab.com/testing-farm/oculus/-/raw/main/results.html
+curl -s --fail --retry 5 --show-error -o index.html "{{ oculus_url }}"
 sed -i 's/https:\/\/api\.testing-farm\.io/http:\/\/{{ api_hostname }}/' index.html
+
+# deploy new ui preview (optionally)
+curl -s --fail --retry 5 --show-error -o next.html "{{ oculus_next_url }}" || true
 
 set_request_timeout
 set_citool_image
