--- a/terragrunt/environments/production/worker-public/citool-config/config/archive.j2
+++ b/terragrunt/environments/production/worker-public/citool-config/config/archive.j2
@@ -1,6 +1,6 @@
 [default]
-artifacts-host = artifacts.dev.testing-farm.io
-artifacts-root = /archive
+artifacts-host = {{ artifacts_hostname }}
+artifacts-root = {{ artifacts_root }}
 source-destination-map = ${config_root}/source-destination-map.yaml
 archive-mode = ssh
 rsync-options = --links,--times,--verbose,--compress
