--- a/terragrunt/environments/production/worker-redhat/citool-config/config/archive.j2
+++ b/terragrunt/environments/production/worker-redhat/citool-config/config/archive.j2
@@ -1,7 +1,7 @@
 [default]
-artifacts-rsync-host = artifacts.osci.redhat.com/artifacts/testing-farm
+artifacts-rsync-host = {{ artifacts_hostname }}/{{ artifacts_path }}
 # NOTE: required, but unused for daemon mode
-artifacts-root = /archive
+artifacts-root = {{ artifacts_root }}
 source-destination-map = ${config_root}/source-destination-map.yaml
 archive-mode = daemon
 rsync-options = --links,--times,--verbose,--compress
